@@ -108,6 +108,11 @@ Write terser output without newlines.
 .BR \-v
 Display version information and exit.
 
+.TP
+.BR \-x
+Support parsing variable nodes.
+Variables can be written in SPARQL style, for example \*(lq?var\*(rq or \*(lq$var\*(rq.
+
 .SH AUTHOR
 Serdi was written by David Robillard <d@drobilla.net>
 
